// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceModal Shallow test Shallow test 1`] = `
<Component
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  testID="publisher_modal_typechoice"
  transparent={true}
  visible={true}
>
  <Component
    style={
      Array [
        Object {
          "flex": 1,
          "justifyContent": "center",
          "paddingBottom": 42,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 42,
        },
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
        },
      ]
    }
  >
    <Component
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
        ]
      }
    >
      <Component
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
            "height": 45,
            "marginBottom": 8,
            "marginLeft": 30,
            "textAlignVertical": "bottom",
          }
        }
      >
        Select Publisher
      </Component>
      <FlatList
        data={
          Array [
            Object {
              "name": "English",
              "type": "language",
              "typeId": "l001",
            },
            Object {
              "name": "日语",
              "type": "language",
              "typeId": "l002",
            },
            Object {
              "name": "中文",
              "type": "language",
              "typeId": "l003",
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        renderItem={[Function]}
        scrollEventThrottle={50}
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </Component>
  </Component>
</Component>
`;

exports[`ChoiceModal Snapshot test Snapshot test 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  testID="publisher_modal_typechoice"
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "justifyContent": "center",
          "paddingBottom": 42,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 42,
        },
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "white",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
            "height": 45,
            "marginBottom": 8,
            "marginLeft": 30,
            "textAlignVertical": "bottom",
          }
        }
      >
        Select Publisher
      </Text>
      <RCTScrollView
        data={
          Array [
            Object {
              "name": "English",
              "type": "language",
              "typeId": "l001",
            },
            Object {
              "name": "日语",
              "type": "language",
              "typeId": "l002",
            },
            Object {
              "name": "中文",
              "type": "language",
              "typeId": "l003",
            },
          ]
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "height": 47,
                }
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "borderColor": "#058b7d",
                    "borderRadius": 10.2,
                    "borderWidth": 1.7999999999999998,
                    "height": 20.4,
                    "justifyContent": "center",
                    "marginLeft": 23,
                    "marginRight": 23,
                    "opacity": 1,
                    "width": 20.4,
                  }
                }
                testID="radiobutton_touchableopacity_outer"
              />
              <Text
                style={
                  Object {
                    "color": "black",
                    "flex": 1,
                    "fontSize": 18,
                    "textAlignVertical": "center",
                  }
                }
                testID="choicemodal_flatlistitem_text"
              >
                English
              </Text>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "height": 47,
                }
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "borderColor": "#058b7d",
                    "borderRadius": 10.2,
                    "borderWidth": 1.7999999999999998,
                    "height": 20.4,
                    "justifyContent": "center",
                    "marginLeft": 23,
                    "marginRight": 23,
                    "opacity": 1,
                    "width": 20.4,
                  }
                }
                testID="radiobutton_touchableopacity_outer"
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#058b7d",
                      "borderRadius": 6,
                      "height": 12,
                      "width": 12,
                    }
                  }
                  testID="radiobutton_view_inner"
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "flex": 1,
                    "fontSize": 18,
                    "textAlignVertical": "center",
                  }
                }
                testID="choicemodal_flatlistitem_text"
              >
                日语
              </Text>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "height": 47,
                }
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "borderColor": "#058b7d",
                    "borderRadius": 10.2,
                    "borderWidth": 1.7999999999999998,
                    "height": 20.4,
                    "justifyContent": "center",
                    "marginLeft": 23,
                    "marginRight": 23,
                    "opacity": 1,
                    "width": 20.4,
                  }
                }
                testID="radiobutton_touchableopacity_outer"
              />
              <Text
                style={
                  Object {
                    "color": "black",
                    "flex": 1,
                    "fontSize": 18,
                    "textAlignVertical": "center",
                  }
                }
                testID="choicemodal_flatlistitem_text"
              >
                中文
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;
